# hsguard

./: CHANGELOG  CMakeLists.txt  GUIDE.html  GUIDE.md  README-de.md  README.md  VERSION.h  g_cfg.c  g_cfg.h  g_color.c  g_color.h  g_finddupes.c  g_finddupes.h  g_helper.c  g_helper.h  g_info.c  g_info.h  g_list.c  g_list.h  g_longtable.c  g_longtable.h  g_remove.c  g_remove.h  g_sql.c  g_sql.h  g_testdb.c  g_testdb.h  g_update.c  g_update.h  hsguard-de.8  hsguard-de.html  hsguard-de.rtf  hsguard.8  hsguard.c  hsguard.h  hsguard.html  hsguard.rc  hsguard.rtf  hsguard_sample.rc  tools.c  (+1 more)
ctools/: c_crc32.c  c_crc32.h
